# HOG_FPGA

./: .directory  .gitignore  README  README_ENG
HLS/: .gitignore
HLS/HOG_acc/: .cproject  .project  hog.cpp  vivado_hls.app
HLS/HOG_apr/: .cproject  .project  hog_apr.cpp  vivado_hls.app
HLS/HOG_bad_memory/: .cproject  .project  hls_hog.cpp  hog.cpp  tb.cpp  vivado_hls.app
HOG_Behaviour/: CMakeLists.txt  main.cpp
HOG_Capture/: CMakeLists.txt  Readme  execute.py  main.cpp  negative.txt  positive.txt  zuschneiden.py
HOG_train/: CMakeLists.txt  L1_information.txt  L2_information.txt  README  acc_classifier.cpp  acc_classifier.npy  acc_classifier_graz.cpp  acc_classifier_graz.npy  acc_classifier_graz_L1.cpp  acc_classifier_graz_L2.cpp  apr_classifier.cpp  apr_classifier.npy  apr_classifier_graz.cpp  apr_classifier_graz.npy  apr_classifier_graz_L1.cpp  apr_classifier_graz_L2.cpp  hog.hpp  main.cpp  train.py
HOG_train/data/: positive_acc.data  positive_apr.data
ReportsandGraphics/: hog_acc_modlules.html  hog_acc_top.html  hog_apr_modules.html  hog_apr_top.html  hog_bad_memory.html
